--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
@@ -19,7 +18,6 @@
   <link rel="stylesheet" href="./styles/Info/styles.css">
   <link rel="stylesheet" href="./styles/Search/styles.css">
   <link rel="stylesheet" href="./styles/Button/styles.css">
-  <link rel="stylesheet" href="./styles/Cards/styles.css">
 </head>
 <body>
   <div class="container">
@@ -40,38 +38,12 @@
       </header>
 
       <section class="info">
-          <h2 id="location" class="info__location">Piracicaba, <span>Brazil</span></h2>
-          <img id="weather_icon" src="./assets/img/icons/033.svg" alt="Thunder" class="info__image-condition">
+          <h2 id="location" class="info__location"></h2>
+          <img id="weather_icon" src="./assets/img/icons/033.svg" alt="" class="info__image-condition">
 
-          <p id="weather_text" class="info__condition">Thunder</p>
+          <p id="weather_text" class="info__condition"></p>
           <div class="info__temperature">
-            <strong id="weather_temperature">38</strong><span>°</span>
-          </div>
-
-          <div class="cards">
-            <div class="card">
-              <img src="./assets/img/icons/005-rainy.svg" alt="Rainy" class="card__image">
-              <p class="card__hour">11:00</p>
-              <div class="card__temperature">
-                <strong >32</strong><span>°</span>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="./assets/img/icons/005-rainy.svg" alt="Rainy" class="card__image">
-              <p class="card__hour">11:00</p>
-              <div class="card__temperature">
-                <strong >32</strong><span>°</span>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="./assets/img/icons/005-rainy.svg" alt="Rainy" class="card__image">
-              <p class="card__hour">11:00</p>
-              <div class="card__temperature">
-                <strong >32</strong><span>°</span>
-              </div>
-            </div>
+            <strong id="weather_temperature"></strong><span>°</span>
           </div>
       </section>
     </main>
